--- a/nick.html
+++ b/nick.html
@@ -1,24 +1,60 @@
-btn.onclick = async () => {
-  const nickValue = input.value.trim();
-  if(nickValue.length < 3){
-    error.textContent = 'Ник слишком короткий';
-    return;
-  }
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+<meta charset="UTF-8">
+<title>Выбор ника</title>
+<link rel="stylesheet" href="hud.css">
+</head>
+<body>
+<div class="hud" style="max-width:500px;margin:80px auto;text-align:center;">
+  <h1>Выберите ник</h1>
+  <input id="nickInput" type="text" placeholder="Введите ник" style="padding:6px 10px;font-size:16px;width:80%;">
+  <button id="submitBtn" style="margin-top:20px;">Отправить</button>
+  <p id="error" style="color:red;margin-top:10px;"></p>
+</div>
 
-  // Проверка уникальности ника
-  const q = query(collection(db,'users'), where('nick','==',nickValue));
-  const snap = await getDocs(q);
-  if(!snap.empty){
-    error.textContent = 'Такой ник уже занят';
-    return;
-  }
+<script type="module">
+import { auth, db } from './firebase.js';
+import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js";
+import { doc, setDoc, collection, query, where, getDocs } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-firestore.js";
 
-  // Создаём документ только с ником и почтой
-  await setDoc(doc(db,'users',user.uid), {
-    nick: nickValue,
-    email: user.email
-  });
+const input = document.getElementById('nickInput');
+const btn = document.getElementById('submitBtn');
+const error = document.getElementById('error');
 
-  // Перенаправляем на main
-  location.href='main.html';
-};
+onAuthStateChanged(auth, user => {
+  if(!user) return location.href='index.html';
+  
+  btn.onclick = async () => {
+    const nickValue = input.value.trim();
+    if(nickValue.length < 3){
+      error.textContent = 'Ник слишком короткий';
+      return;
+    }
+
+    // Проверка уникальности ника
+    const q = query(collection(db,'users'), where('nick','==',nickValue));
+    const snap = await getDocs(q);
+    if(!snap.empty){
+      error.textContent = 'Такой ник уже занят';
+      return;
+    }
+
+    try {
+      // Создаём документ только с ником и почтой
+      await setDoc(doc(db,'users',user.uid), {
+        nick: nickValue,
+        email: user.email
+      });
+
+      // Перенаправление на main
+      location.href='main.html';
+    } catch(e){
+      console.error(e);
+      error.textContent = 'Ошибка при отправке ника';
+    }
+  };
+});
+</script>
+</body>
+</html>
