--- a/main.html
+++ b/main.html
@@ -31,6 +31,7 @@
 <div class="content">
   <h2>Добро пожаловать в GDashBoard!</h2>
   <p>Отслеживайте свой прогресс, отправляйте прохождения и смотрите лидерборд.</p>
+  <button onclick="location.href='send.html'">Перейти к отправке прохождений</button>
 </div>
 <script type="module">
 import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-auth.js";
